# cell_OS

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT_2_CANONICAL_CONDITION_KEYS_COMPLETE.md  AGENT_2_EPISTEMIC_DEBT_WITH_TEETH.md  AGENT_B_VIRTUALWELL_PROBES_SUMMARY.md  AGENT_STANDALONE_DISCREPANCY.md  BIOLOGY_CORE_REFACTOR_SUMMARY.md  BOTH_AGENTS_COMPLETE.md  CAUSALITY_TRAP_RUN.md  CHANGELOG.md  CHANNEL_IDENTITY_ENUM.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_STATUS.md  CONTRIBUTING.md  COST_AWARE_DECISION_SUPPORT.md  DEBT_ENFORCEMENT_SUMMARY.md  DEPLOYMENT_SPLIT.md  Documentation_Housekeeping_Plan.md  EPISTEMIC_ACTIONS_IMPLEMENTATION.md  EPISTEMIC_MANIFEST.md  FINAL_BIOLOGY_FIXES.md  FINAL_REFACTORING_SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  GROWTH_PASSAGE_VIABILITY_FIXES.md  HANGING_TESTS_IDENTIFIED.md  HEAVY_TAIL_IMPLEMENTATION_SUMMARY.md  HOSTILE_REVIEW_PHASE2_RESPONSES.md  HOSTILE_REVIEW_SNR_POLICY.md  HOUSEKEEPING_SUMMARY.md  IMPORT_DEPENDENCY_ANALYSIS_SUMMARY.md  INSTRUMENT_HEALTH_COMPLETE.md  INTERCONNECTIVITY_AUDIT.md  JUPYTERHUB_DEPLOYMENT_CHECKLIST.md  JUPYTERHUB_SETUP.md  LICENSE  LOOPHOLE_ANALYSIS_FINAL.md  MERGE_CHECKLIST.md  MERGE_CHECKLIST_v4.md  (+134 more)
archive/: simulated_executor.py
cell_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: run_campaign.py
config/: campaign_example.yaml  guide_design_template.yaml  posh_screen_example.yaml
dashboard_app/: ARCHITECTURE.txt  BEFORE_AFTER.md  IMPROVEMENTS.md  MIGRATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  app.py  app_main.py  archive_campaign_report.html  config.py  dashboard.py  imaging_loop_dashboard.py  imaging_loop_simulator.py  test_refactoring.py  utils.py
dashboard_assets/: VALIDATION_REPORT.md  dashboard_manifest.json  mcb_daily_metrics.csv  mcb_run_results.csv  mcb_summary.json  plots_manifest.json
dashboard_assets_facility/: FACILITY_REPORT.md  facility_load.csv
dashboard_assets_multi/: VALIDATION_REPORT.md
dashboard_assets_wcb/: WCB_REPORT.md  wcb_daily_metrics.csv  wcb_run_results.csv  wcb_summary.json
data/: calibration_thalamus_params.yaml  campaigns.db  cell_lines.db  cell_lines.yaml  cell_os_experiments.db  cell_os_inventory.db  cell_seeding_densities.csv  cell_thalamus.db.s3_temp  cell_thalamus_params.yaml  cell_thalamus_test.db  compound_doses.csv  confidence_calibrator_v1.pkl  executions.db  experimental_results.db  experiments.db  full_phase0_design.json  hardware_inventory.yaml  inventory.db  job_queue.db  learned_mechanism_signatures_quick.pkl  notifications.db  scrna_seq_params.yaml  simulation_parameters.yaml  simulation_params.db  simulation_params.db.backup  test_autonomous.db
deprecated/: README.md
design/: perturbation_loop.md
docs/: 10_SCENARIO_VERIFICATION_TEMPLATE.md  2026Q1_Phase1_Thalamus_Analysis_Plan.md  2026Q1_Post_Pilot_Strategy.md  2026Q1_Thalamus_Analysis_Plan.md  AGENT_2_COMPLETE.md  AGENT_2_EPISTEMIC_AUDIT.md  AGENT_2_EPISTEMIC_CONTRACTS.md  AGENT_3_AGGREGATION_HARDENING_COMPLETE.md  AGENT_3_CALIBRATION_TRACKING_COMPLETE.md  AGENT_3_DEBT_DEADLOCK_ANALYSIS.md  AGENT_3_DEBT_ENFORCEMENT_COMPLETE.md  ALL_CELL_LINES_VERIFIED.md  ASPIRATION_UNCERTAINTY_COMPLETE.md  ASSUMPTIONS_AND_BOUNDARIES.md  AUTONOMOUS_EXECUTOR.md  AUTONOMOUS_LOOP_COMPLETE.md  AWS_LAMBDA_SETUP.md  A_Case_for_Autonomous_Science_at_insitro.md  BATCH_AWARE_NUISANCE_COMPLETE.md  BATCH_EFFECTS_SYSTEM_COMPLETE.md  BEAD_DYE_IMPLEMENTATION_PHASE1_TIGHTENED.md  BEAD_DYE_SIMULATOR_DESIGN.md  BIOLOGY_SIMULATION_EVOLUTION.md  BIO_VM_AUDIT.md  CALIBRATION_DRIFT_WARNING.md  CANONICAL_CONDITIONS.md  CANONICAL_MODEL_RULES.md  CAUSAL_ATTRIBUTION_HYGIENE.md  CELL_LINE_DATA_SOURCES.md  CELL_LINE_NORMALIZATION_DESIGN.md  COMPOUND_IC50_VERIFICATION_FINDINGS.md  CONFLUENCE_AUDIT_COMPLETE.md  CONFLUENCE_BIOLOGY_FEEDBACK.md  CONFLUENCE_CONFOUNDING_VALIDATOR.md  CONFLUENCE_SATURATION_FIX.md  CONFLUENCE_VALIDATION_CERTIFICATE.md  CONTACT_NUISANCE_MODELING.md  CONTEXT.md  CONTRACTS.md  CRITICAL_FIXES_COMPLETE.md  (+129 more)
examples/: complete_phases_demo.py  demo_simulation_params_db.py  facility_stress_test.py  generate_synthetic_data.py  mcb_crash_test.py  multi_cell_line_test.py  stressor_suite_demo.py  wcb_crash_test.py
frontend/: .env  FOUNDER_VALIDATION_CERTIFICATE.json  index.html  (+8 more)
(+1866 files in other folders)
