[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-os"
version = "0.1.0"
description = "Autonomous lab operating system for cell biology experiments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "pyyaml",
    "streamlit",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

# Uncomment when scripts/run_loop.py exists with main() function
# [project.scripts]
# cell-os-loop = "cell_os.scripts.run_loop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
